h2. Changelog

h3. Versión 2.0.1RC1

* Trámite Alegación añadido.
* Trámite Aceptación/Renuncia añadido.
* Trámite Base actualizado.
* Baremación actualizado.
* Fixed some bugs.
* Cambiado algo de documentación.

h3. Version 2.0 (Sarantontón)

Para adaptar las aplicaciones a esta versión es necesario realizar cambios en el DSL y en las aplicaciones. Consulta la guía de migración a la version 2.0:

**"Migración de aplicaciones a la versión 2.0":version2.0DSL**

* Rediseño de los permisos.
* Mayor flexiblidad a la hora de crear aplicaciones:
** Inyección de servicios utilizando Google Guice 1.3. 
** Integración completa de páginas y popups con campos de entidades, lo cual permite fácilmente la creación, edición, lectura y borrado mediante formularios de cualquier esquema de bases de datos que se modele a partir de entidades creadas con la herramienta. 
** Se permite la navegación a páginas a partir de los botones de una tabla.
** Ahora es posible crear aplicaciones que no dependan ni utilicen la entidad Solicitud ni sus páginas.
** Ahora es posible, si se desea, crear aplicaciones completas sin utilizar popups, sin perder ninguna de las funcionalidades que estos aportan, simplemente sustituyéndolos por páginas.
* Actualizada la interfaz de los servicios.
* Cambio de estilos utilizando twitter-bootstrap.
* Se permite sobreescribir la forma de autenticarse en la aplicación.
* Paquete de tramitación.
* Nuevas Páginas FAP para la Baremación (_No actualices si estás trabajando en algo relacionado con la baremación o tendrás conflictos en las entidades_).
* Posibilidad de personalizar el mensaje de la pantalla de Login.
* Formateador incorporado para los ficheros .fap (CTRL+SHIFT+F).
* Formateador para los ficheros Generados.
* Mejorado el autocompletado de los DSL en el plugin de eclipse.
* Mejorado el syntax highlighting de los DSL en el plugin de eclipse.
* Atributo Ayuda en los elementos Area de Texto y Check.
* Atributo Ancho en el elemento Area de Texto.