@@ -78,12 +78,11 @@ public class AedClient {
 	
 	public static String saveDocumentoTemporal(models.Documento documento, InputStream is, String filename) throws AedExcepcion {
 		//Preparamos el documento para subir al AED
-		documento.prepararParaSubir();
 		
 		Documento documentoAed = new Documento();
 		// Propiedades básicas
 		documentoAed.setPropiedades(new PropiedadesDocumento());
-		documentoAed.getPropiedades().setDescripcion(documento.descripcion);
+		documentoAed.getPropiedades().setDescripcion(documento.descripcionVisible);
 		documentoAed.getPropiedades().setUriTipoDocumento(documento.tipo);
 
 		// Propiedades avanzadas
@@ -226,7 +225,6 @@ public class AedClient {
 	 */
 	public static void actualizarTipoDescripcion(models.Documento documento) throws AedExcepcion {
 		if(documento.uri == null) throw new IllegalArgumentException("La uri del documento no puede ser null");
-		documento.actualizaDescripcion();
 		
 		if (documento.clasificado != null && documento.clasificado.booleanValue()) {
 			log.debug("Actualizando tipo y descripción de un documento clasificado");
@@ -247,7 +245,7 @@ public class AedClient {
 				ubic.getExpedientes().add(docUbic.getExpediente());
 				newUbicaciones.add(ubic);
 			}
-			props.setDescripcion(documento.descripcion);
+			props.setDescripcion(documento.descripcionVisible);
 			props.setUriTipoDocumento(documento.tipo);
 			
 			log.debug("Actualizando Propiedades Clasificado");
@@ -257,7 +255,7 @@ public class AedClient {
 			log.info("Actualizando tipo y descripción de un documento no clasificado");
 			log.debug("Obteniendo propiedades");
 			PropiedadesDocumento props = aed.obtenerDocumentoPropiedadesNoClasificado(documento.uri);
-			props.setDescripcion(documento.descripcion);
+			props.setDescripcion(documento.descripcionVisible);
 			props.setUriTipoDocumento(documento.tipo);
 			log.debug("Actualizando PropiedadesNoClasificado");
 			aed.actualizarDocumentoPropiedadesNoClasificado(props);
