@@ -2,8 +2,9 @@ Formulario Solicitud campo=SolicitudGenerica permiso=solicitudes{
 	
 	Pagina DocumentacionFAP campo=SolicitudGenerica noForm {
 		Tabla documentos titulo="Documentos Aportados" campo=SolicitudGenerica.documentacion.documentos paginaCrear=DocumentosFAP popupEditar=DocumentosEditarFAP {
-			Columna campo=Documento.id
-			Columna campo=Documento.tipo
+			Columna titulo="Id" campo=Documento.id
+			Columna titulo="Tipo Documento" campo=Documento.tipo
+			Columna titulo="Descripcion" campo=Documento.descripcionVisible
 		}
 		//SubirArchivo fileAportacion campo=Documento requerido tramite="Solicitud" aportadoPor="CIUDADANO" extensiones="pdf", "png" // mimes="application/pdf"
 	}
