@@ -298,9 +298,6 @@ fap.aed.procedimientos.tramite.uri=eadmon://gobcan.es/tramitesProcedimientos/TRP
 #Uri del tramite del que se obtendran los tipos de documentos
 fap.aed.procedimientos.procedimiento.uri=eadmon://gobcan.es/procedimientos/PRC000000000000000033/v11
 
-#Uri del tipo otros, este tipo permite a los usuario añadir una descripción
-fap.aed.tiposdocumentos.otros=eadmon://gobcan.es/tiposDocumentos/TDC000000000000000001/v01
-
 #Uri del tipo de solicitud
 fap.aed.tiposdocumentos.solicitud=eadmon://gobcan.es/tiposDocumentos/TDC000000000000000002/v02
 #Uri del tipo de justificante de registro
